# balatro-agent

./: .gitignore  CLAUDE.md  README.txt  bot.py  feature-encoder-spec.md  flush_bot.py  planets_vocab_fixed.json  schema.ts  setup-botmod.sh  spectrals_vocab_fixed.json
agent-rl/: action_head.py  balatro_env.py  complete_policy.py  lstm_module.py  pyproject.toml  rollout_balatro.py  test_training_setup.py  text_encoder.py  tool_calling_balatro.py  train_balatro.py  train_balatro_ppo.py
balatro-controllers/: __init__.py  benchmark.py  controller.py  setup.py
balatro-rl/: __init__.py  balatro_env.py  debug_test.py  feature_encoder.py  jokers_vocab.json  main.py  ppo.py  pyproject.toml  simple_curriculum.py  tarots_vocab_fixed.json  test_dict_stacking.py  test_env.py  test_feature_encoder.py  test_single_env.py  vocabularies.py
balatro-rl/runs/Balatro-v0__ppo__1__1753160942/: events.out.tfevents.1753160942.15f56fd7eb3d.299.0
balatro-rl/runs/Balatro-v0__ppo__1__1753161111/: events.out.tfevents.1753161111.15f56fd7eb3d.631.0
balatroenvs/: __init__.py  blindonly.py  env.py
botmod/: .gitignore  API.md  README.md  config.lua  gamestates.py  main.lua
botmod/lib/: bitser.lua  hook.lua  json.lua  list.lua  sock.lua
botmod/src/: actions.lua  api.lua  bot.lua  botlogger.lua  middleware.lua  utils.lua
docker/: Dockerfile  startup.sh
src/: api.lua  bot.lua  middleware.lua  utils.lua
