[project]
name = "agent-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "balatro-controllers",
    "tensordict>=0.9.1",
    "torch>=2.7.1",
    "torchrl>=0.9.1",
    "transformers>=4.53.2",
]

[tool.uv.sources]
balatro-controllers = { path = "../balatro-controllers" }
