[project]
name = "balatro-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "balatro-controllers",
    "gymnasium>=1.2.0",
    "numpy>=2.3.1",
]

[tool.uv.sources]
balatro-controllers = { path = "../balatro-controllers" }
