[project]
name = "balatro-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "balatro-controllers",
    "gymnasium>=1.2.0",
    "numpy>=2.3.1",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "tyro>=0.9.26",
    "wandb>=0.21.0",
]

[tool.uv.sources]
balatro-controllers = { path = "../balatro-controllers" }
